# PGE

./: .gitignore  CodeFlow.txt  CodingConventions-PR00F.txt  PGE-History.txt  PGE-WoW.txt  PGE.sln  ProjectSettings-PR00F.txt  README.md
PGE/: CMakeLists.txt  PGE.cpp  PGE.h  PGE.smproj  PGE.vcxproj  PGE.vcxproj.filters  PGEInputHandler.cpp  PGEInputHandler.h  PGESysCFG.cpp  PGESysCFG.h  PGESysGFX.cpp  PGESysGFX.h  PGESysNET.cpp  PGESysNET.h  PGESysSFX.cpp  PGESysSFX.h  PGEWorld.cpp  PGEWorld.h  PGEWorldTime.cpp  PGEWorldTime.h  PGEWorldWeather.cpp  PGEWorldWeather.h  PGE_Doxyfile  PGEallHeaders.h  PGEcfgFile.cpp  PGEcfgFile.h  PGEcfgVariable.cpp  PGEcfgVariable.h  PGEconsts.h  PGEincludes.h  PGEpragmas.h
PGE/Audio/: PgeAudio.cpp  PgeAudio.h
PGE/Audio/soloud-RELEASE_20200207/: .gitignore
PGE/Config/: PGESysCFG.cpp  PGESysCFG.h  PGEcfgFile.cpp  PGEcfgFile.h  PGEcfgIHandler.h  PGEcfgProfiles.cpp  PGEcfgProfiles.h  PGEcfgVariable.cpp  PGEcfgVariable.h  PgeOldNewValue.cpp  PgeOldNewValue.h
PGE/Docs/: Graphics Pipeline proof88.docx  PGE.docx  PGE_Doxyfile  PR00FPSvsPRRE Transformations.xlsx  PURE.docx  PURE_Doxyfile_external  PURE_Doxyfile_internal  pure_doxystyle.css
PGE/Docs/logo/: pure.max  pure_extruded_center.max  pure_extruded_combined.max  pure_extruded_square.max  pure_extruded_square_still_view_logo_single.rar  pure_flat_center.max  pure_flat_square.max
PGE/LocMetrics/Baseline-20240621/: LocMetricsCommentWords.csv  LocMetricsFiles.csv  LocMetricsFolders.csv  LocMetricsFunctions.csv
PGE/Memory/: PgeObjectPool.h
PGE/Memory/blIteratorAPI/: blRawArrayWrapper.hpp  blRawIterators.hpp
PGE/Network/: PGESysNET.cpp  PGESysNET.h  PgeClient.cpp  PgeClient.h  PgeGnsClient.cpp  PgeGnsClient.h  PgeGnsServer.cpp  PgeGnsServer.h  PgeGnsWrapper.cpp  PgeGnsWrapper.h  PgeGsnClient.cpp  PgeGsnClient.h  PgeGsnServer.cpp  PgeGsnServer.h  PgeGsnWrapper.cpp  PgeGsnWrapper.h  PgeIClient.h  PgeINetwork.h  PgeIServer.h  PgeIServerClient.h  PgeNetwork.cpp  PgeNetwork.h  PgePacket.cpp  PgePacket.h  PgeServer.cpp  PgeServer.h
PGE/Network/Stubs/: PgeClientStub.h  PgeNetworkStub.h  PgeServerStub.h
PGE/OWS/: OWS.cpp  OWS.h
PGE/PRRE/: PR00FsReducedRenderingEngine.cpp  PR00FsReducedRenderingEngine.h  PRREBaseClass.cpp  PRREBaseClass.h  PRRECamera.cpp  PRRECamera.h  PRREColor.cpp  PRREColor.h  PRREFiledManager.cpp  PRREFiledManager.h  PRREGLextensionFuncs.cpp  PRREGLextensionFuncs.h  PRREGLsnippets.cpp  PRREGLsnippets.h  PRREImage.cpp  PRREImageImpl.h  PRREImageManager.cpp  PRREImageManager.h  PRREManager.cpp  PRREManager.h  PRREMaterial.cpp  PRREMaterialImpl.h  PRREMaterialManager.cpp  PRREMaterialManager.h  PRREMatrix.cpp  PRREMatrix.h  PRREObject3D.cpp  PRREObject3DImpl.h  PRREObject3DManager.cpp  PRREObject3DManager.h  PRREPosUpTarget.cpp  PRREPosUpTarget.h  PRREScreen.cpp  PRREScreen.h  PRRESharedSettings.cpp  PRRESharedSettings.h  PRRETexture.cpp  PRRETextureImpl.h  PRRETextureManager.cpp  PRRETextureManager.h  (+32 more)
PGE/PRRE/Display/: PRREScreen.cpp  PRREScreen.h  PRRESharedSettings.cpp  PRRESharedSettings.h  PRREWindow.cpp
PGE/PRRE/Hardware/: PRREhwAudio.cpp  PRREhwBase.cpp  PRREhwBase.h  PRREhwCentralProcessor.cpp  PRREhwInfo.cpp  PRREhwInfo.h  PRREhwSystemMemory.cpp  PRREhwSystemMemory.h  PRREhwVideo.cpp  PRREhwVideo.h  PRREhwVideoDiscoverOpenGL_1_1.h  PRREhwVideoDiscoverOpenGL_1_2.h  PRREhwVideoDiscoverOpenGL_1_3.h  PRREhwVideoDiscoverOpenGL_1_4.h  PRREhwVideoDiscoverOpenGL_1_5.h  PRREhwVideoDiscoverOpenGL_2_0.h  PRREhwVideoDiscoverOpenGL_2_1.h  PRREhwVideoDiscoverOpenGL_3_0.h  PRREhwVideoDiscoverOpenGL_3_1.h  PRREhwVideoDiscoverOpenGL_3_2.h  PRREhwVideoDiscoverOpenGL_3_3.h  PRREhwVideoDiscoverOpenGL_4_0.h  PRREhwVideoDiscoverOpenGL_4_1.h  PRREhwVideoDiscoverOpenGL_4_2.h  PRREhwVideoDiscoverOpenGL_4_3.h  PRREhwVideoDiscoverOpenGLbase.cpp  PRREhwVideoDiscoverOpenGLbase.h
PGE/PRRE/Material/: PRREColor.cpp  PRREColor.h  PRREImage.cpp  PRREImageImpl.h  PRREImageManager.cpp  PRREImageManager.h  PRREMaterial.cpp  PRREMaterialImpl.h  PRREMaterialManager.cpp  PRREMaterialManager.h  PRRETexture.cpp  PRRETextureImpl.h  PRRETextureManager.cpp  PRRETextureManager.h
PGE/PRRE/Math/: PRREMatrix.cpp  PRREMatrix.h  PRREPosUpTarget.cpp  PRREPosUpTarget.h  PRRETransformMatrix.cpp  PRREVector.cpp  PRREVector.h  PUREScissor.cpp  PUREScissor.h
PGE/PRRE/Object3D/: PRREMesh3D.cpp  PRREMesh3DImpl.h  PRREMesh3DManager.cpp  PRREMesh3DManager.h  PRREObject3D.cpp  PRREObject3DImpl.h  PRREObject3DManager.cpp  PRREObject3DManager.h  PRREVertexTransferMode.cpp  PRREVertexTransferMode.h  PRREVertexTransferModeImpl.h
PGE/PRRE/Render/: PRREIIncrementalRenderPipeline.h  PRREIRenderable.h  PRREIRenderer.h  PRRERendererHWfixedPipe.cpp  PRRERendererHWfixedPipe.h  PRRERendererSWincremental.cpp  PRRERendererSWincremental.h
PGE/PRRE/gl/: glut.h
PGE/PRRE/source/: PR00FsReducedRenderingEngine.cpp  (+11 more)
PGE/UnitTests/: CMakeLists.txt  OWSTest.h  PFLFixFIFOTest.h  PFLTest.h  PGEBulletTest.h  PGESysCFGTest.h  PGEcfgFileTest.h  PGEcfgProfilesTest.h  PGEcfgVariableTest.h  PR00FsReducedRenderingEngineTest.h  PR00FsReducedRenderingEngineTest2.h  PR00FsUltimateRenderingEngineTest.h  PR00FsUltimateRenderingEngineTest2.h  PRREAxisAlignedBoundingBoxTest.h  PRREBaseClassTest.h  PRREBoundingVolumeHierarchyTest.h  PRRECameraTest.h  PRREColorTest.h  PRREFiledManagedTest.h  PRREFiledManagerTest.h  PRREHardwareInfoTest.h  PRREImageManagerTest.h  PRREImageTest.h  PRREManagedTest.h  PRREManagerTest.h  PRREMaterialManagerTest.h  PRREMaterialTest.h  PRREMatrixTest.h  PRREMesh3DManagerTest.h  PRREMesh3DTest.h  PRREObject3DManagerTest.h  PRREObject3DTest.h  PRREOctreeTest.h  PRREPosUpTargetTest.h  PRRERendererHWfixedPipeTest.h  PRREScissorTest.h  PRREScreenTest.h  PRRESharedSettingsTest.h  PRRETextureManagerTest.h  PRRETextureTest.h  (+58 more)
PGE/Weapons/: WeaponManager.cpp  WeaponManager.h
PGE/docpages/: PRooFPS-dd-Packet-Rates.xlsx  README.md  menu-01-Usage.md  menu-02-Input.md  menu-03-Display.md  menu-04-Networking.md  menu-05-Sound.md  menu-06-Multithreading.md  menu-07-Physics.md  menu-08-Crossplatform.md  menu-09-Used-Libraries.md
(+318 files in other folders)
